minor change. message is now inside an object

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Taudio",
+  "name": "Text to Audio",
   "icons": [
     {
       "src": "favicon.ico",
